--- a/Map.storyboard
+++ b/Map.storyboard
@@ -229,13 +229,97 @@
                                 </constraints>
                                 <color key="progressTintColor" red="0.9371213317" green="0.34781831499999999" blue="0.19313588740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </progressView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eal-gx-so3">
+                                <rect key="frame" x="25" y="80" width="325" height="336"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="TdV-rF-49A">
+                                        <rect key="frame" x="10" y="8" width="305" height="328"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="yLu-Fv-RHg">
+                                                <rect key="frame" x="0.0" y="0.0" width="305" height="40"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rZc-X1-Kb3">
+                                                        <rect key="frame" x="0.0" y="0.0" width="31" height="40"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="31" id="Wx4-t5-k7f"/>
+                                                            <constraint firstAttribute="height" constant="40" id="Xyg-0Z-SU2"/>
+                                                        </constraints>
+                                                    </button>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is new in version 1.5?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="frZ-H0-A2c">
+                                                        <rect key="frame" x="36" y="0.0" width="234" height="40"/>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yqj-Ou-J5s">
+                                                        <rect key="frame" x="275" y="0.0" width="30" height="40"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="30" id="Kvg-KI-jqa"/>
+                                                            <constraint firstAttribute="height" constant="40" id="vDU-WM-yn7"/>
+                                                        </constraints>
+                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <state key="normal" image="xmark" catalog="system">
+                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="closeBannerButton:" destination="fpw-Wl-p7n" eventType="touchUpInside" id="Y8D-MO-cFZ"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.3249011148" green="0.72542864380000005" blue="0.90694672539999999" alpha="0.80433968320000004" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="R9j-fD-Rty"/>
+                                                </constraints>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ZmP-w1-5En">
+                                                <rect key="frame" x="0.0" y="43" width="305" height="252"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Four different types of workout use unique algoritms for calculating paddles, steps and callories" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9H2-hq-uhu">
+                                                        <rect key="frame" x="0.0" y="0.0" width="305" height="60"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="60" id="GU0-8V-lak"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iD9-Pc-ySO">
+                                                        <rect key="frame" x="0.0" y="65" width="305" height="187"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="fpw-Wl-p7n" id="6q1-5M-5zA"/>
+                                                        </connections>
+                                                    </scrollView>
+                                                </subviews>
+                                            </stackView>
+                                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="5" translatesAutoresizingMaskIntoConstraints="NO" id="a2F-Ys-dsh">
+                                                <rect key="frame" x="0.0" y="298" width="305" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="5gY-n9-pXe"/>
+                                                </constraints>
+                                                <color key="currentPageIndicatorTintColor" red="0.13911497589999999" green="0.3948251009" blue="0.56501853469999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </pageControl>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.80850833649999998" blue="0.48923581840000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.3249011148" green="0.72542864380000005" blue="0.90694672539999999" alpha="0.80433968320000004" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="TdV-rF-49A" secondAttribute="bottom" id="6zj-3p-Fba"/>
+                                    <constraint firstItem="TdV-rF-49A" firstAttribute="leading" secondItem="eal-gx-so3" secondAttribute="leading" constant="10" id="AjR-W4-hk2"/>
+                                    <constraint firstAttribute="trailing" secondItem="TdV-rF-49A" secondAttribute="trailing" constant="10" id="oJe-ZK-GfB"/>
+                                    <constraint firstItem="TdV-rF-49A" firstAttribute="top" secondItem="eal-gx-so3" secondAttribute="top" constant="8" id="y5Q-7v-UlD"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.32908498809999998" green="0.73477026010000002" blue="0.91862581809999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="deh-zn-pSH" firstAttribute="centerX" secondItem="Zsl-v5-xCU" secondAttribute="centerX" id="4si-oW-E8c"/>
                             <constraint firstItem="2oi-Em-MKy" firstAttribute="top" secondItem="Zsl-v5-xCU" secondAttribute="top" constant="20" id="7IC-hC-pYy"/>
                             <constraint firstItem="xa3-au-3KY" firstAttribute="centerX" secondItem="Zsl-v5-xCU" secondAttribute="centerX" id="AW7-GY-hpY"/>
+                            <constraint firstItem="Zsl-v5-xCU" firstAttribute="bottom" secondItem="eal-gx-so3" secondAttribute="bottom" constant="202" id="BBd-4F-SLF"/>
+                            <constraint firstItem="eal-gx-so3" firstAttribute="leading" secondItem="Zsl-v5-xCU" secondAttribute="leading" constant="25" id="Ehg-FU-GfE"/>
                             <constraint firstItem="Wfj-fa-akl" firstAttribute="leading" secondItem="f5O-xC-hCQ" secondAttribute="leadingMargin" constant="3.3333333333333428" id="FL1-d0-fMJ"/>
+                            <constraint firstItem="Zsl-v5-xCU" firstAttribute="trailing" secondItem="eal-gx-so3" secondAttribute="trailing" constant="25" id="GM3-fP-Adf"/>
                             <constraint firstItem="ldZ-GE-gzT" firstAttribute="top" secondItem="Zsl-v5-xCU" secondAttribute="top" constant="20" id="NMd-Zx-TXt"/>
                             <constraint firstItem="f5O-xC-hCQ" firstAttribute="centerY" secondItem="Zsl-v5-xCU" secondAttribute="centerY" id="O9Z-pa-K08"/>
                             <constraint firstItem="Zsl-v5-xCU" firstAttribute="trailing" secondItem="UfD-CY-Zmq" secondAttribute="trailing" id="QII-2l-0AF"/>
@@ -244,6 +328,7 @@
                             <constraint firstItem="xa3-au-3KY" firstAttribute="centerY" secondItem="3xg-9K-b0L" secondAttribute="centerY" id="W6z-zF-Qf3"/>
                             <constraint firstItem="Wfj-fa-akl" firstAttribute="centerX" secondItem="f5O-xC-hCQ" secondAttribute="centerX" id="Yfx-4G-fXA"/>
                             <constraint firstItem="f5O-xC-hCQ" firstAttribute="centerX" secondItem="Zsl-v5-xCU" secondAttribute="centerX" id="cVa-ZU-Sbl"/>
+                            <constraint firstItem="eal-gx-so3" firstAttribute="top" secondItem="Zsl-v5-xCU" secondAttribute="top" constant="80" id="cW6-Jf-YDJ"/>
                             <constraint firstItem="Wfj-fa-akl" firstAttribute="top" secondItem="f5O-xC-hCQ" secondAttribute="bottom" constant="-10" id="dmc-gh-45E"/>
                             <constraint firstItem="deh-zn-pSH" firstAttribute="top" secondItem="Zsl-v5-xCU" secondAttribute="top" constant="25" id="qGB-eD-hX4"/>
                             <constraint firstItem="UfD-CY-Zmq" firstAttribute="leading" secondItem="Zsl-v5-xCU" secondAttribute="leading" id="sQe-sT-E1x"/>
@@ -255,6 +340,10 @@
                     <tabBarItem key="tabBarItem" title="Map" image="map" catalog="system" id="GzP-kB-2yW"/>
                     <connections>
                         <outlet property="altitudeLabel" destination="V6Z-lb-IDd" id="5nx-sK-aVH"/>
+                        <outlet property="bannerBodyLabel" destination="9H2-hq-uhu" id="hhe-sI-VWT"/>
+                        <outlet property="bannerPageControlLabel" destination="a2F-Ys-dsh" id="nbp-y1-hO7"/>
+                        <outlet property="bannerTitleLabel" destination="frZ-H0-A2c" id="x2w-wE-vNF"/>
+                        <outlet property="bannerView" destination="eal-gx-so3" id="XQp-OB-kM5"/>
                         <outlet property="button" destination="xa3-au-3KY" id="eWA-94-PwU"/>
                         <outlet property="counterTextLabel" destination="f5O-xC-hCQ" id="gSs-dL-lnL"/>
                         <outlet property="firstCardLabel" destination="SJQ-eg-ztk" id="G1O-aj-HeZ"/>
@@ -267,6 +356,7 @@
                         <outlet property="mapLabel" destination="z3U-gV-IkQ" id="GuX-2K-wqZ"/>
                         <outlet property="progressBarLabel" destination="Wfj-fa-akl" id="nnh-DR-OAo"/>
                         <outlet property="recenterButton" destination="ldZ-GE-gzT" id="ckv-1b-cBP"/>
+                        <outlet property="scrollView" destination="iD9-Pc-ySO" id="B86-P0-Dgr"/>
                         <outlet property="secondCardLabel" destination="Ol2-5t-6Bj" id="uJy-GT-d8D"/>
                         <outlet property="secondCardUnitLabel" destination="Y6D-yr-Uko" id="ZaC-pm-aud"/>
                         <outlet property="secondCardView" destination="Bf1-pV-O94" id="cOa-Q4-m36"/>
@@ -281,7 +371,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RHi-3j-F1N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1967.2" y="359.11330049261085"/>
+            <point key="canvasLocation" x="1967.2" y="358.4707646176912"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="La0-Pr-LjJ">
@@ -328,5 +418,6 @@
         <image name="location.north.fill" catalog="system" width="108" height="128"/>
         <image name="map" catalog="system" width="128" height="113"/>
         <image name="walk" width="512" height="512"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
     </resources>
 </document>
